--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="container mt-5 ">
             <div class="row justify-content-around align-content-start">
                 <div class=" p-2 col-12 col-mb-6 col-lg-4 col-xl-3 mb-3">
-                        <img src=https://i.linio.com/p/01d1c98bbb40e5abcc61b14c85bfeca5-product.jpg alt="CAMISA MANGA LARGA HOMBRE MOSSIMO"></img>
+                        <img class="box" src=https://i.linio.com/p/01d1c98bbb40e5abcc61b14c85bfeca5-product.jpg alt="CAMISA MANGA LARGA HOMBRE MOSSIMO"></img>
                     <p>CAMISA MANGA LARGA HOMBRE MOSSIMO </p>
                 </div>
                     <div class=" p-2 col-12 col-mb-6 col-lg-4 col-xl-3 mb-3">
